# pragmatic_hexagonal

./: .gitignore  Cargo.toml  LICENSE  README.md  RECAP_PRAGMATIC_HEXAGONAL.md  logic_schema.tldr  structure.md
libraries/dto/: cargo.toml
libraries/dto/src/: lib.rs
libraries/logger/: cargo.toml
libraries/logger/src/: logger.rs
libraries/unit_test/: cargo.toml
micro_services/billing/: cargo.toml
micro_services/client/: cargo.toml
micro_services/client/src/: main.rs  result.rs
micro_services/client/src/adapters/: mod.rs  mongodb_documents.rs  mongodb_repo.rs
micro_services/client/src/domains/: entity.rs  mod.rs  ports.rs  services.rs
micro_services/client/src/infrastructure/: logger.rs
micro_services/flower_delivery/: cargo.toml
micro_services/inventory_management/: cargo.toml
micro_services/inventory_management/src/: lib.rs  main.rs  result.rs
micro_services/inventory_management/src/adapters/: inmemory_repo.rs  mod.rs  mongodb_documents.rs  mongodb_repo.rs
micro_services/inventory_management/src/application/: facade.rs  mod.rs  use_cases.rs
micro_services/inventory_management/src/domains/: entity.rs  mod.rs  ports.rs  services.rs
micro_services/inventory_management/src/infrastructure/: logger.rs  mod.rs  wiring.rs
